# Game-and-Engine-structure

./: .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: core.hpp  window.hpp
engine/src/: core.cpp  window.cpp
game/: CMakeLists.txt
game/src/: main.cpp
projects/test_project/: CMakeLists.txt
src/: core.cpp  window.cpp
